Rearranged stuff for updating L1->L2 dirty lines

--- a/Lab 3/.vscode/tasks.json
+++ b/Lab 3/.vscode/tasks.json
@@ -15,7 +15,7 @@
 				"L2Cache.cpp",
 				"LruStack.cpp",
 				"-o",
-				"${fileDirname}\\${fileBasenameNoExtension}.exe"
+				"CacheSim.exe"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
