--- a/Lab 3/.vscode/tasks.json
+++ b/Lab 3/.vscode/tasks.json
@@ -23,10 +23,7 @@
 			"problemMatcher": [
 				"$gcc"
 			],
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			},
+			"group": "build",
 			"detail": "compiler: C:\\msys64\\mingw64\\bin\\gcc.exe"
 		}
 	]
